@@ -1,4 +1,6 @@
 DIST libxml++-2.24.2.tar.bz2 590695 RMD160 44700ae8fd9d8562099780a3059d1c0bcbeccfd4 SHA1 025bd6a358c5f074b9d54bb2b1247a8307c9d8f0 SHA256 5346209e1091c6e1c6b5ddacb3394ba36caa6f9e7235ed608e2d880fce0ce381
+DIST libxml++-2.24.3.tar.bz2 616830 RMD160 6f6c04452c79b2d4970d94047b9f9ac8c80f21b8 SHA1 2a9250d594f5979a28556b071fb2f76a92cd530d SHA256 ae926d2cbd4a5a00bde586b91d65a3c237cd4dd9896d62f8eb13c7917e82b654
 EBUILD libxmlpp-2.24.2.ebuild 1064 RMD160 b95afa84887adea7fe1ca44074a5193e9f82d426 SHA1 5dbdf5b06a97a706bd712d096e72d61811683c5d SHA256 76f8042629b6d12353e3c1776055998cfb845a07ecc1efaf9362f340f9412d28
-MISC ChangeLog 12063 RMD160 6844694d2fc2c6d8add4027013c214c3830fa501 SHA1 4fca50f284185bf71a46ee4062c2dc282b11f1e6 SHA256 0728668e576ad83e8bed526913d76c2e564b2a0030cb443d96de37d62ff4d6ea
+EBUILD libxmlpp-2.24.3.ebuild 1064 RMD160 c746bc227673911d6f027f2997e78e4cf0d36430 SHA1 c4d017a6395086a6b1136f50156136979e915433 SHA256 679cf6ad9c76d7a13473eae229f34a0a43eb14402353651dd50f5e8518562d38
+MISC ChangeLog 12324 RMD160 b19214bcabee73ed4f7988e8f4563a8c14d3f4b9 SHA1 1a45e236516b2dafc50198201060423f134e5302 SHA256 d0cbf2be2f216d7cdda0381e6c79b4746f3ae551a4e473c83ac93d2e34628764
 MISC metadata.xml 162 RMD160 e3b9e3d8ece920d890bf37c43a6bcd9757539556 SHA1 6ee3bb3e0cce43428124dfa192af30ddb055d95f SHA256 7d0ce82d5ca3b20cb1c4641c7b7aae7082fd6be059b85fab9699095fd965f2e9
